--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,14 +2,15 @@ name: Build and Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ main ]  # Change if your default branch is different
-  pull_request: # also
+    branches: [ main ]
+  pull_request:
 
 permissions:
   contents: write
 
 jobs:
-  build:
+  test:
+    name: Run unit & Playwright tests
     runs-on: ubuntu-latest
 
     steps:
@@ -20,19 +21,50 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: 'npm'  # ✅ Cache node_modules automatically
+          cache: 'npm'
+          cache-dependency-path: package-lock.json
 
       - name: Install dependencies
-        run: npm ci  # ✅ Clean, reproducible installs (fail fast on mismatch)
+        run: npm ci
 
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
-      - name: Run build script
-        run: node build.js
+      - name: Run Vitest
+        run: npm run unit:test
 
       - name: Run Playwright tests
-        run: npm test
+        run: npm run test
+
+      - name: Generate Playwright report
+        run: npx playwright generate-report
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: playwright-report
+          path: playwright-report/
+
+  build:
+    name: Build Project
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: 'npm'
+          cache-dependency-path: package-lock.json
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run build script
+        run: node build.js
 
       - name: Check build output
         run: |
@@ -41,10 +73,27 @@ jobs:
             exit 1
           fi
 
+      - uses: actions/upload-artifact@v3
+        with:
+          name: build-output
+          path: build/
+
+  deploy:
+    name: Deploy to GitHub Pages
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+
+    steps:
+      - name: Download built site
+        uses: actions/download-artifact@v3
+        with:
+          name: build-output
+          path: build
+
       - name: Deploy to GitHub Pages
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'  # ✅ Only deploy on push to main
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build
-          force_orphan: true  # safer and cleaner gh-pages branch
+          force_orphan: true
