--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.html",
   "scripts": {
     "serve": "http-server ./src -c-1",
+    "unit:test": "itest run --reporter=dot",
     "test": "start-server-and-test serve 8080 test:e2e",
     "test:e2e": "playwright test",
     "install:playwright": "npx playwright install"
@@ -25,11 +26,13 @@
   "dependencies": {
     "@playwright/test": "^1.54.1",
     "fs-extra": "^11.3.0",
+    "http-server": "^14.1.1",
     "playwright": "^1.54.1",
-    "terser": "^5.43.1",
-    "http-server": "^14.1.1"
+    "terser": "^5.43.1"
   },
   "devDependencies": {
-    "start-server-and-test": "^2.0.12"
+    "jsdom": "^26.1.0",
+    "start-server-and-test": "^2.0.12",
+    "vitest": "^3.2.4"
   }
 }
