--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,7 @@ jobs:
         with:
           name: playwright-report
           path: playwright-report/
+          retention-days: 7
 
   build:
     name: Build Project
