--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "unit:test": "vitest run --reporter=dot",
     "test": "start-server-and-test serve 8080 test:e2e",
     "test:e2e": "playwright test --reporter=html",
-    "install:playwright": "npx playwright install"
+    "install:playwright": "npx playwright install",
+    "test:ui": "npx playwright test --ui-port=8081"
   },
   "repository": {
     "type": "git",
